--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: 6.0
+          dotnet-version: "6.0.x"
       - name: Install dependencies
         working-directory: Plogon
         run: dotnet restore
