--- a/Plogon/Plogon.csproj
+++ b/Plogon/Plogon.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Discord.Net.Webhook" Version="3.7.2" />
       <PackageReference Include="Docker.DotNet" Version="3.125.5" />
       <PackageReference Include="LibGit2Sharp" Version="0.27.0-preview-0182" />
       <PackageReference Include="Serilog" Version="2.11.0" />
