--- a/Plogon/Plogon.csproj
+++ b/Plogon/Plogon.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
       <PackageReference Include="Docker.DotNet" Version="3.125.5" />
       <PackageReference Include="LibGit2Sharp" Version="0.27.0-preview-0182" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
       <PackageReference Include="Serilog" Version="2.11.0" />
       <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
       <PackageReference Include="System.CommandLine.DragonFruit" Version="0.4.0-alpha.22114.1" />
