--- a/Plogon/Plogon.csproj
+++ b/Plogon/Plogon.csproj
@@ -12,6 +12,7 @@
       <PackageReference Include="LibGit2Sharp" Version="0.27.0-preview-0182" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
       <PackageReference Include="Octokit" Version="5.1.0" />
+      <PackageReference Include="PgpCore" Version="5.10.0" />
       <PackageReference Include="Serilog" Version="2.11.0" />
       <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
       <PackageReference Include="System.CommandLine.DragonFruit" Version="0.4.0-alpha.22114.1" />
