Adjust container uid/gid to runner

--- a/Plogon/Plogon.csproj
+++ b/Plogon/Plogon.csproj
@@ -5,6 +5,9 @@
         <TargetFramework>net8.0</TargetFramework>
         <LangVersion>latest</LangVersion>
         <Nullable>enable</Nullable>
+        
+        <!-- for UnixHelpers -->
+        <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     </PropertyGroup>
 
     <ItemGroup>
